FSW-19: Popup click issue resolved on mobile

--- a/packages/mars-theme/src/component/style.css
+++ b/packages/mars-theme/src/component/style.css
@@ -634,9 +634,6 @@ p.chakra_text_soon span {
   .search__wrap svg {
     margin-top: 9px;
   }
-  .search__wrap .search_input {
-    margin-top: 8px;
-  }
   .relatedSearchData .search_pro_wrap {
     width: 100%;
   }
